--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -32,9 +32,9 @@
                     <div class="row my-1">
                         <div class="col">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="/">Home</a></li>
-                                <li class="breadcrumb-item"><a href="/user">User/Admin</a></li>
-                                <li class="breadcrumb-item active" aria-current="page"><%= data._id? data.user_id : 'Craete User' %></li>
+                                <li class="breadcrumb-item"><a href="/" class="darkmode">Home</a></li>
+                                <li class="breadcrumb-item"><a href="/user" class="darkmode">User/Admin</a></li>
+                                <li class="breadcrumb-item active darkmode" aria-current="page"><%= data._id? data.user_id : 'Craete User' %></li>
                             </ol>
                         </div>
                     </div>
