--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4,7 +4,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="/css/style.css" rel="stylesheet" type="text/css">
         <script src="/js/darkMode.js"></script>
-        
     </head>
     <body class="darkmode">
         <div class="container">
@@ -89,12 +88,12 @@
                         </div>
                     </div>
                     <% if(datas.length == 0){ %>
-                        <div class="row py-1 border-bottom border-dark text-center">
+                        <div class="row py-1 border-bottom border-primary text-center">
                             <label>Not have user</label>
                         </div>
                     <% } %>
                     <% for(data of datas){ %>
-                        <div class="row py-1 border-bottom border-dark">
+                        <div class="row py-1 border-bottom border-primary">
                             <div class="col text-center">
                                 <%= data.user_id %>
                             </div>
