--- a/views/recycleBin/index.ejs
+++ b/views/recycleBin/index.ejs
@@ -11,14 +11,14 @@
       <div class="row">
         <div class="col-2">
           <div class="list-group list-group-flush text-center">
-            <a href="/" class="list-group-item darkmode">Index</a>
-            <a href="/productlist" class="list-group-item darkmode">Products</a>
-            <a href="/stock" class="list-group-item darkmode">Stocks</a>
-            <a href="/deliveryOrder" class="list-group-item darkmode">Delivery Orders</a>
-            <a href="/user" class="list-group-item darkmode">Users</a>
-            <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
-            <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
-            <label class="list-group-item darkmode" onclick="darkMode(this)">Dark Mode</label>
+              <a href="/" class="list-group-item darkmode">Index</a>
+              <a href="/productlist" class="list-group-item darkmode">Products</a>
+              <a href="/stock" class="list-group-item darkmode">Stocks</a>
+              <a href="/deliveryOrder" class="list-group-item darkmode">Delivery Orders</a>
+              <a href="/user" class="list-group-item darkmode">Users</a>
+              <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
+              <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
+              <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">Dark Mode</label>
           </div> 
           
           <form action="/user/logout" method="post" id="logout">
