--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -17,7 +17,7 @@
                         <a href="/user" class="list-group-item darkmode">Users</a>
                         <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
                         <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
-                        <label class="list-group-item darkmode" onclick="darkMode(this)">Dark Mode</label>
+                        <label class="list-group-item darkmode darkmode-btn" onclick="darkMode(this)">Dark Mode</label>
                     </div> 
                     
                     <form action="/user/logout" method="post" id="logout">
